fixed video overflow

--- a/src/styles/components/body.scss
+++ b/src/styles/components/body.scss
@@ -184,7 +184,7 @@ audio::-webkit-media-controls{
 .bodyPost-body {
     padding: 12px;
     max-width: 1500px;
-    max-height: 800px;
+    max-height: 900px;
     object-fit: contain;
     background-color: white;
     overflow: scroll;
