--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -34,4 +34,9 @@ img {
     object-fit: contain;
     max-width: 1500px;
     max-height: 700px;
+    border-radius: 8px;
+}
+
+video {
+    border-radius: 4px;
 }
